--- a/pythonanywhere/templates/pws.html
+++ b/pythonanywhere/templates/pws.html
@@ -387,7 +387,7 @@
     <div id="content-container">
       <!-- Lobby section -->
       <div id="lobby">
-        <img src="static/zeeslag.png" alt="Zeeslag Logo" style="display: block; margin: 0 auto 20px auto; max-width: 150px;">
+        <a href="/"><img src="static/zeeslag.png" alt="Zeeslag Logo" style="display: block; margin: 0 auto 20px auto; max-width: 150px;"></a>
         <h1>Zeeslag Lobby</h1>
         <div id="game-options">
           <div style="text-align: center; margin: 20px 0;">
