--- a/pythonanywhere/templates/pws.html
+++ b/pythonanywhere/templates/pws.html
@@ -454,7 +454,7 @@
 
   <!-- Bot info button -->
   <div id="bot-info-btn-container">
-    <button id="botInfo">Over de Bot</button>
+    <button id="botInfo">Over dit project</button>
   </div>
 
   <div id="lb-button-container">
