--- a/pythonanywhere/templates/bot_info.html
+++ b/pythonanywhere/templates/bot_info.html
@@ -91,9 +91,10 @@
             }
             `;
             document.head.appendChild(style);
+            document.write('<p>You\'re seeing confetti because you\'re using Linux, and we think that\'s worth celebrating!</p>');
         }
          else {
-          document.write('3. Een "normale" modus waarin je tegen je vrienden of andere spelers kunt spelen.');
+          document.write('3. Een "normale" modus waarin je tegen je vrienden (heb je die?) of andere spelers kunt spelen.');
           console.log('Geen iPhone gebruiker gedetecteerd, gelukkig maar');
         }
       </script>
