--- a/pythonanywhere/templates/pws.html
+++ b/pythonanywhere/templates/pws.html
@@ -425,7 +425,7 @@
         </div>
       </div>
       <div id="trophy-section">
-        <h3>Unlocked Trophies</h3>
+        <h3>Ontgrendelde trofeeën</h3>
         <div id="trophy-list"></div>
       </div>
       <button id="logout" style="margin-top: 20px;">Uitloggen (speel als gast)</button>
