--- a/pythonanywhere/templates/group_index.html
+++ b/pythonanywhere/templates/group_index.html
@@ -960,6 +960,8 @@
                         } else {
                             showModal();
                         }
+                    } else if (response.status === 403) {
+                        window.location.href = '/login_page?suspended=true';
                     } else {
                         console.log("Session key is valid, user is logged in.");
                         hideModal();
