--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -29,10 +29,13 @@
       }
     }
     </script>
-    <script type="module">
-        import { quicklink } from 'https://unpkg.com/quicklink@2.3.0?module';
-        quicklink();
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/quicklink/2.3.0/quicklink.umd.js"></script>
+    <script>
+    window.addEventListener('load', () => {
+    quicklink.listen();
+    });
     </script>
+        
     <script src="https://instant.page/5.1.0" type="module"></script>      
     <style>
         body {
